Crash by scene change #61190

Closed
opened 2019-02-05 00:36:10 +01:00 by Leon Eckardt · 8 comments

System Information
Linux Ubuntu 16.04.5 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile

Blender Version
Broken: 2.80.43 38984b10ff (4.2.19)

Short description of error
Blender crashes by switching to scene "mass"

Exact steps for others to reproduce the error

  • Change scene to "mass"
  • ->Crash
    Possibly caused by Particle system in the scene

{F6509649}particle_observation3.crash.txt

**System Information** Linux Ubuntu 16.04.5 LTS 64Bit, Mesa DRI Intel(R) Sandybridge Mobile **Blender Version** Broken: 2.80.43 38984b10ff (4.2.19) **Short description of error** Blender crashes by switching to scene "mass" **Exact steps for others to reproduce the error** * Change scene to "mass" * ->Crash Possibly caused by Particle system in the scene {[F6509649](https://archive.blender.org/developer/F6509649/particle_observation3.blend)}[particle_observation3.crash.txt](https://archive.blender.org/developer/F6509646/particle_observation3.crash.txt)
Author

Added subscriber: @Leon95

Added subscriber: @Leon95

Added subscriber: @capnm

Added subscriber: @capnm

So far I could trace this back to a NaN pointer arithmetic.

In isect_ray_tri_watertight_v3_precalc()

	/* Calculate the shear constants. */
	inv_dir_z = 1.0f / ray_direction[kz];
	isect_precalc->sx = ray_direction[kx] * inv_dir_z;
	isect_precalc->sy = ray_direction[ky] * inv_dir_z;
	isect_precalc->sz = inv_dir_z;

with a zero ray_direction- [ ] in
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/particle_distribute.c$213

image.png

Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault.

0x0000555558b226e2 in distribute_grid (mesh=0x7fffada28a08, psys=0x7fffaac6ea08)
at source/blender/blenkernel/intern/particle_distribute.c:227
227 (pa+(int)( lambda * size- [x])*a0mul)->flag &= ~PARS_UNEXIST;


You probably did something similar:

  • add a particle system
  • select emission -> source -> grid
  • edit the object mesh, scale all vertices to 0
  • switch back to the object mode, crash
So far I could trace this back to a NaN pointer arithmetic. In isect_ray_tri_watertight_v3_precalc() ``` /* Calculate the shear constants. */ inv_dir_z = 1.0f / ray_direction[kz]; isect_precalc->sx = ray_direction[kx] * inv_dir_z; isect_precalc->sy = ray_direction[ky] * inv_dir_z; isect_precalc->sz = inv_dir_z; ``` with a zero `ray_direction- [ ]` in https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/particle_distribute.c$213 ![image.png](https://archive.blender.org/developer/F6510770/image.png) ``` Thread 1 "blender8debug" received signal SIGSEGV, Segmentation fault. ``` 0x0000555558b226e2 in distribute_grid (mesh=0x7fffada28a08, psys=0x7fffaac6ea08) at source/blender/blenkernel/intern/particle_distribute.c:227 227 (pa+(int)( **lambda** * size- [x])*a0mul)->flag &= ~PARS_UNEXIST; ---- You probably did something similar: * add a particle system * select emission -> source -> grid * edit the object mesh, scale all vertices to 0 * switch back to the object mode, crash
Author

Yes I remember that I scaled the mesh to 0. However it did not crash immediately. I guess it updates once a scene Update is triggered.

Yes I remember that I scaled the mesh to 0. However it did not crash immediately. I guess it updates once a scene Update is triggered.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-02-05 13:17:55 +01:00

Backtrace:

Thread 30 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd3ff9700 (LWP 26503)]
0x00005555581098eb in distribute_grid (mesh=0x7fffd2832608, psys=0x7fffd0138208)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:227
227									(pa+(int)(lambda*size[a])*a0mul)->flag &= ~PARS_UNEXIST;
(gdb) bt
#0  0x00005555581098eb in distribute_grid (mesh=0x7fffd2832608, psys=0x7fffd0138208)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:227
#1  0x000055555810c33e in psys_thread_context_init_distribute (ctx=0x7fffd3ff7fc0, sim=0x7fffd3ff8340, from=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:865
#2  0x000055555810db96 in distribute_particles_on_dm (sim=0x7fffd3ff8340, from=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:1205
#3  0x000055555810de4e in distribute_particles (sim=0x7fffd3ff8340, from=1)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:1251
#4  0x0000555558044e33 in system_step (sim=0x7fffd3ff8340, cfra=2, use_render_params=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_system.c:3954
#5  0x0000555558046946 in particle_system_update (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, psys=0x7fffd0138208,
    use_render_params=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_system.c:4363
#6  0x00005555579a73cf in deformVerts (md=0x7fffe4c1f888, ctx=0x7fffd3ff8550, mesh=0x0, vertexCos=0x7fffd2831048, numVerts=4)
    at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_particlesystem.c:185
#7  0x0000555557fd1aad in modwrap_deformVerts (md=0x7fffe4c1f888, ctx=0x7fffd3ff8550, me=0x0, vertexCos=0x7fffd2831048, numVerts=4)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:844
#8  0x0000555557e5ed7f in mesh_calc_modifiers (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, inputVertexCos=0x0, useDeform=1,
    need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffd0525f68, r_final=0x7fffd0525f60)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1237
#9  0x0000555557e61ddd in mesh_build_data (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, dataMask=637534729,
    build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2034
#10 0x0000555557e621af in makeDerivedMesh (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, em=0x0, dataMask=637534729,
    build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2150
#11 0x0000555558010030 in BKE_object_handle_data_update (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:183
#12 0x0000555558010960 in BKE_object_eval_uber_data (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:356
#13 0x000055555846341a in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f=
    @0x7fffd01af640: 0x5555580108b0 <BKE_object_eval_uber_data>, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008, __args#1=@0x7fffd01af650: 0x7fffce3fe008,
    __args#2=@0x7fffd01af648: 0x7fffd0525a08) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60
#14 0x0000555558461f13 in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn=
    @0x7fffd01af640: 0x5555580108b0 <BKE_object_eval_uber_data>, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008, __args#1=@0x7fffd01af650: 0x7fffce3fe008,
    __args#2=@0x7fffd01af648: 0x7fffd0525a08) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95
#15 0x00005555584607d5 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffd01af640, __args=...)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400
#16 0x000055555845e72e in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&)
    (this=0x7fffd01af640, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484
#17 0x000055555845b680 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297
#18 0x0000555558475955 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffce35bfc8, __args#0=0x7fffd01dd008)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687
#19 0x0000555558474f36 in DEG::deg_task_run_func (pool=0x7fffe5fcd008, taskdata=0x7fffce35bf68, thread_id=7)
    at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88
#20 0x0000555558432d7d in handle_local_queue (thread_id=7, tls=0x7fffd9600968)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417
Backtrace: ``` Thread 30 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd3ff9700 (LWP 26503)] 0x00005555581098eb in distribute_grid (mesh=0x7fffd2832608, psys=0x7fffd0138208) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:227 227 (pa+(int)(lambda*size[a])*a0mul)->flag &= ~PARS_UNEXIST; (gdb) bt #0 0x00005555581098eb in distribute_grid (mesh=0x7fffd2832608, psys=0x7fffd0138208) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:227 #1 0x000055555810c33e in psys_thread_context_init_distribute (ctx=0x7fffd3ff7fc0, sim=0x7fffd3ff8340, from=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:865 #2 0x000055555810db96 in distribute_particles_on_dm (sim=0x7fffd3ff8340, from=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:1205 #3 0x000055555810de4e in distribute_particles (sim=0x7fffd3ff8340, from=1) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_distribute.c:1251 #4 0x0000555558044e33 in system_step (sim=0x7fffd3ff8340, cfra=2, use_render_params=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_system.c:3954 #5 0x0000555558046946 in particle_system_update (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, psys=0x7fffd0138208, use_render_params=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/particle_system.c:4363 #6 0x00005555579a73cf in deformVerts (md=0x7fffe4c1f888, ctx=0x7fffd3ff8550, mesh=0x0, vertexCos=0x7fffd2831048, numVerts=4) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_particlesystem.c:185 #7 0x0000555557fd1aad in modwrap_deformVerts (md=0x7fffe4c1f888, ctx=0x7fffd3ff8550, me=0x0, vertexCos=0x7fffd2831048, numVerts=4) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:844 #8 0x0000555557e5ed7f in mesh_calc_modifiers (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, inputVertexCos=0x0, useDeform=1, need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffd0525f68, r_final=0x7fffd0525f60) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1237 #9 0x0000555557e61ddd in mesh_build_data (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, dataMask=637534729, build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2034 #10 0x0000555557e621af in makeDerivedMesh (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08, em=0x0, dataMask=637534729, build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2150 #11 0x0000555558010030 in BKE_object_handle_data_update (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:183 #12 0x0000555558010960 in BKE_object_eval_uber_data (depsgraph=0x7fffd01dd008, scene=0x7fffce3fe008, ob=0x7fffd0525a08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:356 #13 0x000055555846341a in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__f= @0x7fffd01af640: 0x5555580108b0 <BKE_object_eval_uber_data>, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008, __args#1=@0x7fffd01af650: 0x7fffce3fe008, __args#2=@0x7fffd01af648: 0x7fffd0525a08) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:60 #14 0x0000555558461f13 in std::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&> (__fn= @0x7fffd01af640: 0x5555580108b0 <BKE_object_eval_uber_data>, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008, __args#1=@0x7fffd01af650: 0x7fffce3fe008, __args#2=@0x7fffd01af648: 0x7fffd0525a08) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/invoke.h:95 #15 0x00005555584607d5 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul>) (this=0x7fffd01af640, __args=...) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:400 #16 0x000055555845e72e in std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fffd01af640, __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/functional:484 #17 0x000055555845b680 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, Object*))(Depsgraph*, Scene*, Object*)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffd3ff8b10: 0x7fffd01dd008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:297 #18 0x0000555558475955 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fffce35bfc8, __args#0=0x7fffd01dd008) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.2.0/include/g++-v8/bits/std_function.h:687 #19 0x0000555558474f36 in DEG::deg_task_run_func (pool=0x7fffe5fcd008, taskdata=0x7fffce35bf68, thread_id=7) at /home/zed/programmering/blender_master/blender/source/blender/depsgraph/intern/eval/deg_eval.cc:88 #20 0x0000555558432d7d in handle_local_queue (thread_id=7, tls=0x7fffd9600968) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/task.c:417 ```

This issue was referenced by 49e07dfdfb

This issue was referenced by 49e07dfdfbe5edf133ec9a5f1ffa7cd8ac05c3a3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61190
No description provided.